[package]
name = "point-mass-ballistics-cli"
version = "0.0.1"
authors = ["Phraeyll <Phraeyll@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
indoc = "2.0.3"

[dependencies.clap]
version = "4.3.19"
features = ["derive"]

[dependencies.point-mass-ballistics]
git = "https://github.com/Phraeyll/point-mass-ballistics"
branch = "master"
